--- a/src/main/webapp/CSS/SignIn2.css
+++ b/src/main/webapp/CSS/SignIn2.css
@@ -113,7 +113,7 @@ h1 {
     margin-bottom: 20px;
 }
 
-input[type="email"],
+input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 15px;
@@ -125,7 +125,7 @@ input[type="password"] {
     transition: border-color 0.3s;
 }
 
-input[type="email"]:focus,
+input[type="text"]:focus,
 input[type="password"]:focus {
     border-color: red;
     outline: none;
