--- a/src/main/webapp/CSS/NewAdmin.css
+++ b/src/main/webapp/CSS/NewAdmin.css
@@ -44,7 +44,7 @@ body {
         }
         
         .logo span {
-            color: #e91e63;
+            color:blue;
         }
         
         .nav-section {
