--- a/src/main/webapp/CSS/SignIn5.css
+++ b/src/main/webapp/CSS/SignIn5.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    background: linear-gradient(135deg, #000 50%, rgb(0, 0, 128) 50%);
+    background: linear-gradient(135deg, #000 50%, #337cf9 50%);
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -22,7 +22,7 @@ body {
 
 .container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 950px;
 }
 
 /* Login Card Styling */
@@ -37,7 +37,7 @@ body {
 
 .login-content {
     flex: 1;
-    padding: 40px;
+    padding: 100px;
     display: flex;
     flex-direction: column;
 }
@@ -45,7 +45,7 @@ body {
 /* Right side image panel */
 .banner-image {
     flex: 1;
-    background: linear-gradient(black 60%, rgb(0, 64, 128) 40%);
+    background: linear-gradient(black 60%,  #337cf9 40%);
     background-image: url('/DropBeatZ/Pictures/1.png'); /* Make sure image path is correct */
     background-size: cover;
     background-position: center;
@@ -97,7 +97,7 @@ body {
 
 .slogan {
     font-size: 14px;
-    color: #aaa;
+    color: black;
 }
 
 /* Form Styling */
