--- a/src/main/webapp/CSS/Songs.css
+++ b/src/main/webapp/CSS/Songs.css
@@ -16,4 +16,5 @@
 
 body {
     overflow: auto;
-    background: #000; /* Static dark background
+    background: #000; /* Static dark background*/
+}
